--- a/my-cli/package.json
+++ b/my-cli/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi-escapes": "^7.2.0",
+    "chalk": "^5.6.2",
+    "commist": "^3.2.0",
+    "enquirer": "^2.4.1",
     "got": "^14.6.5",
     "minimist": "^1.2.8"
   }
